flux/apps/calibre/calibre-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: calibre-web
          image: linuxserver/calibre-web:0.6.26
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: calibre-web
              containerPort: 8083
              protocol: TCP

          volumeMounts:
            - mountPath: /config
              name: calibre-web-config
            - mountPath: /data
              name: calibre-web-media
          livenessProbe:
            httpGet:
              path: /
              port: calibre-web
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: calibre-web
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "250M"
              cpu: ".5"
            limits:
              memory: "2G"
              cpu: "2"
      volumes:
        - name: calibre-web-config
          persistentVolumeClaim:
            claimName: calibre-web-config
        - name: calibre-web-media
          persistentVolumeClaim:
            claimName: calibre-web-media-qnap
