flux/apps/calibre/calibre-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: calibre-web
  ports:
    - name: calibre-web
      port: 8083
      targetPort: calibre-web
      protocol: TCP
